release v1.2